package com.Rifacel.models;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class Municipality {
    private String name;
}
